tests/pass/matching/same order for binders4.mmu
(sort s )
(sort t )
(term a ((a0 s ()) (a1 t ())) (s ()))
