tests/fail/registering/dependency with a pure sort.mmu
(sort spure )
(term a ((x s ())) (s (x)))
